--- a/resources/themes/lig-wordpress-template/assets/css/00_constants/_03_font.scss
+++ b/resources/themes/lig-wordpress-template/assets/css/00_constants/_03_font.scss
@@ -1,4 +1,7 @@
 $font-family: (
+        japanese-system: '"Helvetica Neue", Arial, "Hiragino Kaku Gothic ProN", "Hiragino Sans", Meiryo, sans-serif',
+        yugo: 'BlinkMacSystemFont, Roboto, "Segoe UI", "Helvetica Neue", HelveticaNeue, YuGothic, "Yu Gothic Medium", "Yu Gothic", Verdana, Meiryo, sans-serif',
+        yugo-bold: 'BlinkMacSystemFont, Roboto, "Segoe UI semibold", "Helvetica Neue", HelveticaNeue, YuGothic, "Yu Gothic", "Segoe UI", Verdana, Meiryo, sans-serif',
         helvetica: '"Helvetica Neue", Helvetica, Arial, sans-serif',
         noto-sans: '"Noto Sans JP", sans-serif',
 );
@@ -6,7 +9,7 @@ $font-family: (
 $font: (
         base: (
                 pc: (
-                        font-family: noto-sans,
+                        font-family: japanese-system,
                         font-size: 18px,
                         font-weight: 400,
                         line-height: 1,
