Modify font function

--- a/resources/themes/lig-wordpress-template/assets/css/00_constants/_03_font.scss
+++ b/resources/themes/lig-wordpress-template/assets/css/00_constants/_03_font.scss
@@ -9,14 +9,13 @@ $font-family: (
 $font: (
         // baseの設定はhtml要素に適用されます
         // サイトのベースになる設定をしてください
+        // spで変更になる箇所はspの中に指定してください
         base: (
-                pc: (
-                        font-family: japanese-system,
-                        font-size: 18px,
-                        font-weight: 400,
-                        line-height: 1,
-                        letter-spacing: .03em,
-                ),
+                font-family: japanese-system,
+                font-size: 18px,
+                font-weight: 400,
+                line-height: 1,
+                letter-spacing: .03em,
                 sp: (
                         font-size: 16px,
                 )
@@ -24,12 +23,10 @@ $font: (
         // 各フォントの設定を配列にセットします
         // baseと同じ場合はプロパティを省略できます
         //heaading-1: (
-        //        pc: (
-        //                font-size: 32px,
-        //                font-weight: 700,
-        //                line-height: 1.4,
-        //                letter-spacing: 1em,
-        //        ),
+        //        font-size: 32px,
+        //        font-weight: 700,
+        //        line-height: 1.4,
+        //        letter-spacing: 1em,
         //        sp: (
         //                font-size: 24px,
         //        )
