--- a/resources/themes/lig-wordpress-template/assets/css/00_constants/_02_easing.scss
+++ b/resources/themes/lig-wordpress-template/assets/css/00_constants/_02_easing.scss
@@ -2,7 +2,7 @@
 $easing: (
         // easeingのモードです
         // 初期では https://easings.net/ja のイージングを用意しています
-        // @include ease(key); で呼び出します
+        // ease(key); で呼び出します
         easeInSine: cubic-bezier(0.47, 0, 0.745, 0.715),
         easeOutSine: cubic-bezier(0.39, 0.575, 0.565, 1),
         easeInOutSine: cubic-bezier(0.445, 0.05, 0.55, 0.95),
