--- a/resources/themes/lig-wordpress-template/assets/css/00_constants/_00_break-point.scss
+++ b/resources/themes/lig-wordpress-template/assets/css/00_constants/_00_break-point.scss
@@ -12,3 +12,20 @@ $break-point: (
         sp: 375,
         sp-min: 320,
 );
+
+/*
+PCディスプレイサイズ
+1920 * 1080
+1536 * 864
+1440 * 900
+1366 * 768
+1280 * 720
+ */
+$pc-bestview-height: 900;
+
+/*
+SPディスプレイサイズ
+414 * 896
+374 * 667
+ */
+$sp-bestview-height: 667;
