--- a/resources/themes/lig-wordpress-template/assets/css/00_constants/_02_easing.scss
+++ b/resources/themes/lig-wordpress-template/assets/css/00_constants/_02_easing.scss
@@ -28,3 +28,5 @@ $easing: (
         easeOutBack: cubic-bezier(0.175, 0.885, 0.32, 1.275),
         easeInOutBack: cubic-bezier(0.68, -0.55, 0.265, 1.55)
 );
+
+$base-ease: easeInSine;
