--- a/resources/themes/lig-wordpress-template/assets/css/03_parts/_sns-share.scss
+++ b/resources/themes/lig-wordpress-template/assets/css/03_parts/_sns-share.scss
@@ -1,1 +1,25 @@
-//nsn-share
+//sns-share
+
+.sns-share {
+    //
+}
+
+.sns-share__heading {
+    //
+}
+
+.sns-share__list {
+    //
+}
+
+.sns-share__item {
+    //
+}
+
+.sns-share__link {
+    //
+}
+
+.sns-share__svg {
+    //
+}
