--- a/resources/themes/lig-wordpress-template/assets/css/99_utilities/_01_is-status.scss
+++ b/resources/themes/lig-wordpress-template/assets/css/99_utilities/_01_is-status.scss
@@ -1,10 +1,10 @@
-.is-only-pc-show {
+.is-pc-show {
   @include sp() {
     display: none;
   }
 }
 
-.is-only-sp-show {
+.is-sp-show {
   @include pc() {
     display: none;
   }
