--- a/resources/themes/lig-wordpress-template/assets/css/03_parts/footer/_footer.scss
+++ b/resources/themes/lig-wordpress-template/assets/css/03_parts/footer/_footer.scss
@@ -1,1 +1,25 @@
 // footer
+
+.footer {
+  //
+}
+
+.footer__main {
+  //
+}
+
+.footer__logo {
+  //
+}
+
+.footer__sns-menu {
+  //
+}
+
+.footer__copy {
+    //
+}
+
+.footer__copy-text {
+    //
+}
