--- a/resources/themes/lig-wordpress-template/assets/css/03_parts/header/_header.scss
+++ b/resources/themes/lig-wordpress-template/assets/css/03_parts/header/_header.scss
@@ -1,1 +1,22 @@
 // header
+
+.header {
+  //
+}
+
+.header__main {
+  //
+}
+
+.header__title {
+  //
+}
+
+.header__title-link {
+  //
+}
+
+.header__title-logo {
+    //
+  }
+  
