--- a/resources/themes/lig-wordpress-template/assets/css/01_functions/_01_mixins.scss
+++ b/resources/themes/lig-wordpress-template/assets/css/01_functions/_01_mixins.scss
@@ -12,6 +12,15 @@
   }
 }
 
+// hover可能な端末に絞ったhover
+@mixin hover {
+  @media (hover: hover) and (pointer: fine) {
+    &:hover {
+      @content;
+    }
+  }
+}
+
 // media query
 @mixin mq($mode:break, $type: max) {
   $width: bp($mode);
